@@ -140,36 +140,27 @@ compact_mem_regions (void)
       }
 }
 
-/*
- *
- * grub_get_conv_memsize(i) :  return the conventional memory size in KB.
- *	BIOS call "INT 12H" to get conventional memory size
- *      The return value in AX.
- */
-static inline grub_uint16_t
-grub_get_conv_memsize (void)
-{
-  struct grub_bios_int_registers regs;
-
-  regs.flags = GRUB_CPU_INT_FLAGS_DEFAULT;
-  grub_bios_interrupt (0x12, &regs);
-  return regs.eax & 0xffff;
-}
-
 void
 grub_machine_init (void)
 {
   int i;
+#if 0
   int grub_lower_mem;
+#endif
 
   /* Initialize the console as early as possible.  */
   grub_console_init ();
 
+  /* This sanity check is useless since top of GRUB_MEMORY_MACHINE_RESERVED_END
+     is used for stack and if it's unavailable we wouldn't have gotten so far.
+   */
+#if 0
   grub_lower_mem = grub_get_conv_memsize () << 10;
 
   /* Sanity check.  */
   if (grub_lower_mem < GRUB_MEMORY_MACHINE_RESERVED_END)
     grub_fatal ("too small memory");
+#endif
 
 /* FIXME: This prevents loader/i386/linux.c from using low memory.  When our
    heap implements support for requesting a chunk in low memory, this should
